2005-11-04  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (model_fill_date_iter):
	* logview-findbar.c: (iter_is_visible),
	(logview_findbar_entry_changed_cb), (logview_findbar_hide),
	(logview_findbar_new):
	* logview.c: (logview_init):
	* logview.h: Remove the whole Find bar mess (which never worked
	well anyway) with a nice and fast filter.

2005-11-04  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_add_logs_from_names), (logview_save_prefs),
	(logview_destroy), (logview_version_selector_changed),
	(logview_close_log), (logview_open_log), (window_size_changed_cb),
	(logview_init), (logview_window_new):
	* main.c: (main):
	* misc.c: (date_get_string), (widget_set_font):
	* userprefs.c: (prefs_create_defaults), (prefs_load),
	(prefs_monospace_font_changed), (prefs_get_monospace),
	(prefs_get_have_tearoff), (prefs_get_logs), (prefs_get_active_log),
	(prefs_get_width), (prefs_get_height), (prefs_free_loglist),
	(prefs_store_log), (prefs_store_active_log),
	(prefs_store_fontsize), (prefs_save), (prefs_store_window_size),
	(prefs_connect), (prefs_init):
	* userprefs.h: privatize all the preference stuff.

2005-11-03  Vincent Noel <vnoel@cox.net>

	* info.c: (loginfo_show):
	* log_repaint.c: (model_fill_iter):
	* loglist.c: (loglist_find_log_from_name),
	(loglist_select_log_from_name):
	* logrtns.c: (logline_fill_from_string), (log_open):
	* logview.c: (logview_copy):
	* misc.c: (locale_to_utf8): Call locale_to_utf8 once when loading
	instead of calling it repeatedly for every line (saves us 3
	g_alloc/g_free * n log line)

2005-11-03  Vincent Noel <vnoel@cox.net>

	* info.c: (loginfo_repaint), (loginfo_quit), (loginfo_close),
	(loginfo_new), (loginfo_show):
	* info.h:
	* log_repaint.c: (row_toggled_cb):
	* logview.c: (logview_window_new):
	* logview.h:
	* main.c: (main): Cleanups.

	* info.c (loginfo_repaint): Don't crash when requesting properties
	for a dateless log.

2005-11-03  Vincent Noel <vnoel@cox.net>

	Remove a few now-useless functions. Cleanup.
