@@ -22,10 +22,11 @@
 #include <glib/gi18n.h>
 #include "logview.h"
 
+static gchar *search_string;
+
 static gboolean
 iter_is_visible (GtkTreeModel *model, GtkTreeIter *iter, gpointer data)
 {
-	gchar *search_string = data;
 	gchar *fields[4];
 	gboolean found = FALSE;
 
@@ -45,56 +46,66 @@ iter_is_visible (GtkTreeModel *model, GtkTreeIter *iter, gpointer data)
 }
 
 static void
+logview_findbar_clear (GtkWidget *widget, gpointer data)
+{
+	LogviewWindow *logview = LOGVIEW_WINDOW (data);
+	Log *log = logview->curlog;
+	if (log==NULL)
+		return;
+
+	g_object_unref (log->filter);
+	log->filter = NULL;
+	log_repaint (logview);
+}
+	
+static void
 logview_findbar_entry_changed_cb (GtkEditable *editable,
 				  gpointer     data)
 {
 	LogviewWindow *logview = data;
 	GtkTreeModel *model;
-	GtkTreeModelFilter *filter = NULL;
-	GtkTreePath *path;
 	GtkTreeIter iter;
-	gchar *search_string;
-	Log *log;
+	Log *log = logview->curlog;
 
-	if (!logview->curlog)
+	if (log == NULL)
 		return;
-	log = logview->curlog;
 
 	search_string = gtk_entry_get_text (GTK_ENTRY (logview->find_entry));
 
 	if (strlen (search_string) < 3 && strlen (search_string) > 0) 
 		return;
 
-	if (strlen (search_string) == 0) {
-		gtk_tree_view_set_model (GTK_TREE_VIEW (logview->view), GTK_TREE_MODEL (log->model));
+	if (strlen (search_string) == 0 && log->filter != NULL) {
+		logview_findbar_clear (NULL, logview);
 		return;
 	}
 
-	if (filter == NULL) {
-		gtk_tree_model_get_iter_first (log->model, &iter);
-		path = gtk_tree_model_get_path (log->model, &iter);
-		filter = GTK_TREE_MODEL_FILTER (gtk_tree_model_filter_new (log->model, NULL));
+	if (log->filter == NULL) {
+		log->filter = GTK_TREE_MODEL_FILTER (gtk_tree_model_filter_new (log->model, NULL));
+		gtk_tree_model_filter_set_visible_func (log->filter, iter_is_visible, search_string, NULL);
+		gtk_tree_view_set_model (GTK_TREE_VIEW (logview->view), GTK_TREE_MODEL (log->filter));
+	} else {
+		gtk_tree_model_filter_refilter (log->filter);
 	}
-	
-	gtk_tree_model_filter_set_visible_func (filter, iter_is_visible, search_string, NULL);
-	gtk_tree_view_set_model (GTK_TREE_VIEW (logview->view), GTK_TREE_MODEL (filter));
+
 	gtk_tree_view_expand_all (GTK_TREE_VIEW (logview->view));
-	g_object_unref (filter);
 }
 
-static gboolean
-logview_findbar_hide (GtkWidget *widget, GdkEventFocus *event, LogviewWindow *window)
+void
+logview_update_findbar_visibility (LogviewWindow *logview)
 {
-	gtk_widget_hide (window->find_bar);
-	log_repaint (window);
-	return (FALSE);
+	Log *log = logview->curlog;
+	if (log->filter != NULL)
+		gtk_widget_show (logview->find_bar);
+	else
+		gtk_widget_hide (logview->find_bar);
 }
 
 GtkWidget *
 logview_findbar_new (LogviewWindow *window)
 {
 	GtkWidget *hbox;
-	GtkWidget *label;
+	GtkWidget *label, *button;
 	
 	hbox = gtk_hbox_new (FALSE, 6);
 	gtk_container_set_border_width (GTK_CONTAINER (hbox), 3);
@@ -104,16 +115,19 @@ logview_findbar_new (LogviewWindow *window)
 	window->find_entry = gtk_entry_new ();
 	gtk_label_set_mnemonic_widget (GTK_LABEL (label), window->find_entry);
 	
+	button = gtk_button_new_with_mnemonic (_("_Clear"));
+	
 	gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
 	gtk_box_pack_start (GTK_BOX (hbox), window->find_entry, FALSE, FALSE, 0);
+	gtk_box_pack_start (GTK_BOX (hbox), button, FALSE, FALSE, 0);
 
 	gtk_widget_show (hbox);
 	gtk_widget_show (window->find_entry);
 
 	g_signal_connect (G_OBJECT (window->find_entry), "changed",
 			  G_CALLBACK (logview_findbar_entry_changed_cb), window);
-	g_signal_connect (G_OBJECT (window->find_entry), "focus-out-event",
-			  G_CALLBACK (logview_findbar_hide), window);
+	g_signal_connect (G_OBJECT (button), "clicked",
+			  G_CALLBACK (logview_findbar_clear), window);
 
 	return hbox;
 }
